--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -19,7 +19,15 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
                  address: int,
                  logger_handle: str,
                  inst_name: str,
-                 parent: Union[{% if asyncoutput %}Async{% endif %}AddressMap,{% if asyncoutput %}Async{% endif %}RegFile,{% if asyncoutput %}Async{% endif %}Memory]):
+                 parent: Union[{% if asyncoutput -%}Async{%- endif -%}AddressMap,{%- if asyncoutput -%}Async{%- endif -%}RegFile,
+                 {%- if node.has_sw_readable and node.has_sw_writable -%}
+                    Memory{% if asyncoutput %}Async{% endif -%}ReadWrite
+                 {%- elif node.has_sw_readable and not node.has_sw_writable -%}
+                    Readable{% if asyncoutput %}Async{% endif -%}Memory
+                 {%- elif not node.has_sw_readable and node.has_sw_writable -%}
+                    Writable{% if asyncoutput %}Async{% endif -%}Memory
+                 {%- endif -%}
+                 ]):
 
         super().__init__(address=address,
                          {% if 'accesswidth' in node.list_properties() -%}accesswidth={{node.get_property('accesswidth')}}{%- else -%}accesswidth={{node.size*8}}{%- endif -%},
