--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -62,11 +62,11 @@
                     {% if child_node.is_array %}
         if unroll:
             for child in self.{{safe_node_name(child_node)}}:
-                yield cast(Writable{% if asyncoutput %}Async{% endif %}Register, child)
+                yield child
         else:
-            yield cast(Tuple[Writable{% if asyncoutput %}Async{% endif %}Register, ...], self.{{safe_node_name(child_node)}})
+            yield self.{{safe_node_name(child_node)}}
                     {% else %}
-        yield cast(Writable{% if asyncoutput %}Async{% endif %}Register, self.{{safe_node_name(child_node)}})
+        yield self.{{safe_node_name(child_node)}}
                     {%- endif %}
                 {%- endif -%}
             {%- endif -%}
