First version of the regsiter array context managers

--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -1255,6 +1255,40 @@ class {{fq_block_name}}_block_access({{top_node.type_name}}_TestCase_BlockAccess
         {%- endfor %}
     {%- endif %}
 
+    {% if asyncoutput %}async {% endif %}def test_register_array_context_manager(self) -> None:
+        """
+        Walk the register map and check that register map context managers work correctly
+        """
+        {% for node in owned_rolled_elements.reg_array_nodes %}
+        # test context manager to register:
+        # {{'.'.join(node.get_path_segments())}}
+        # size {{node.size}}
+        # total_size {{node.total_size}}
+        empty_read = [0 for i in range({{node.total_size}} // {{node.size}})]
+        follow_along = [0 for i in range({{node.total_size}} // {{node.size}})]
+        with self.subTest(msg='register: {{'.'.join(node.get_path_segments())}}'):
+            with patch(base_name + '.write_addr_space') as write_callback_mock,\
+                                patch(base_name + '.read_addr_space', return_value=0) as read_callback_mock, \
+                                patch(base_name + '.read_block_addr_space',
+                                      return_value=Array('{{get_array_typecode(node.size * 8)}}', empty_read)) as read_block_callback_mock , \
+                                patch(base_name + '.write_block_addr_space') as write_block_callback_mock:
+                {% if node.has_sw_readable and node.has_sw_writable -%}
+                {% if asyncoutput %}async {% endif %}with self.dut.{{'.'.join(get_python_path_segments(node))}}.single_read_modify_write() as dut:
+                    pass
+                {% elif not node.has_sw_readable and node.has_sw_writable-%}
+                {% if asyncoutput %}async {% endif %}with self.dut.{{'.'.join(get_python_path_segments(node))}}.single_write() as dut:
+                    pass
+                read_block_callback_mock.assert_not_called()
+                {% elif node.has_sw_readable and not node.has_sw_writable-%}
+                {% if asyncoutput %}async {% endif %}with self.dut.{{'.'.join(get_python_path_segments(node))}}.single_read() as dut:
+                    pass
+                write_block_callback_mock.assert_not_called()
+                {% endif %}
+                read_callback_mock.assert_not_called()
+                write_callback_mock.assert_not_called()
+
+        {%- endfor %}
+
 
 if __name__ == '__main__':
 {% if asyncoutput %}
