--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -1,27 +1,20 @@
 {%- macro register_class_attributes(node) %}
         {%- if node.is_array %}
     self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_array_cls = {{get_fully_qualified_type_name(node)}}_array_cls(address=self.address+{{node.raw_address_offset}},
+                                                                                  {% if 'accesswidth' in node.list_properties() -%}accesswidth={{node.get_property('accesswidth')}}{%- else -%}accesswidth={{node.size*8}}{%- endif -%},
+                                                                                  {% if 'regwidth' in node.list_properties() -%}width={{node.get_property('regwidth')}}{%- else -%}width={{node.size*8}}{%- endif -%},
                                                                                   stride={{node.array_stride}},
                                                                                   dimensions=tuple({{node.array_dimensions}}),
                                                                                   logger_handle=logger_handle+'.{{node.inst_name}}',
                                                                                   inst_name='{{node.inst_name}}', parent=self)
         {%- else %}
-            {%- if node.has_sw_readable and node.has_sw_writable %}
     self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(
                                                                  address=self.address+{{node.address_offset}},
+                                                                 {% if 'accesswidth' in node.list_properties() -%}accesswidth={{node.get_property('accesswidth')}}{%- else -%}accesswidth={{node.size*8}}{%- endif -%},
+                                                                 {% if 'regwidth' in node.list_properties() -%}width={{node.get_property('regwidth')}}{%- else -%}width={{node.size*8}}{%- endif -%},
                                                                  logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                   inst_name='{{node.inst_name}}', parent=self)
-            {%- elif node.has_sw_readable and not node.has_sw_writable %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(
-                                                                 address=self.address+{{node.address_offset}},
-                                                                 logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                   inst_name='{{node.inst_name}}', parent=self)
-            {%- elif not node.has_sw_readable and node.has_sw_writable %}
-    self.__{{node.inst_name}}:{{get_fully_qualified_type_name(node)}}_cls = {{get_fully_qualified_type_name(node)}}_cls(
-                                                                                 address=self.address+{{node.address_offset}},
-                                                                                 logger_handle=logger_handle+'.{{node.inst_name}}',
-                                                                                 inst_name='{{node.inst_name}}', parent=self)
-            {%- endif %}
+                                                                 inst_name='{{node.inst_name}}', parent=self)
+
         {%- endif %}
 
 {%- endmacro %}
