--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -17,6 +17,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
 
     def __init__(self,
                  address: int,
+                 width: int,
+                 accesswidth: int,
                  logger_handle: str,
                  inst_name: str,
                  parent: Union[{% if asyncoutput -%}Async{%- endif -%}AddressMap,{%- if asyncoutput -%}Async{%- endif -%}RegFile,
@@ -30,8 +32,8 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
                  ]):
 
         super().__init__(address=address,
-                         {% if 'accesswidth' in node.list_properties() -%}accesswidth={{node.get_property('accesswidth')}}{%- else -%}accesswidth={{node.size*8}}{%- endif -%},
-                         width={{node.size*8}},
+                         width=width,
+                         accesswidth=accesswidth,
                          logger_handle=logger_handle,
                          inst_name=inst_name,
                          parent=parent)
@@ -64,27 +66,6 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         {% for child_node in get_reg_readable_fields(node) -%}
         yield self.{{safe_node_name(child_node)}}
         {% endfor %}
-
-    {# context manager #}
-    @{% if asyncoutput %}async{% endif %}contextmanager
-    {% if asyncoutput %}async {% endif %}def single_read(self) -> {% if asyncoutput %}AsyncGenerator['{{get_fully_qualified_type_name(node)}}_cls', None]{% else %}Generator['{{get_fully_qualified_type_name(node)}}_cls', None, None]{% endif %}:
-        """
-        Context Manager to do multiple accesses using a single read operation
-        """
-        {% if asyncoutput %}async {% endif %}with super().single_read() as reg:
-           yield cast('{{get_fully_qualified_type_name(node)}}_cls',reg)
-
-    {% if node.has_sw_writable %}
-    @{% if asyncoutput %}async{% endif %}contextmanager
-    {% if asyncoutput %}async {% endif %}def single_read_modify_write(self, verify:bool = False, skip_write: bool = False) -> {% if asyncoutput %}AsyncGenerator['{{get_fully_qualified_type_name(node)}}_cls', None]{% else %}Generator['{{get_fully_qualified_type_name(node)}}_cls', None, None]{% endif %}:
-        """
-        Context Manager to do multiple accesses using a single read/modify write operation
-        """
-        {% if asyncoutput %}async {% endif %}with super().single_read_modify_write(verify=verify, skip_write=skip_write) as reg:
-           yield cast('{{get_fully_qualified_type_name(node)}}_cls',reg)
-    {% endif %}
-
-
     {% endif %}
 
     {% if node.has_sw_writable %}
