--- a/tests/testcases/regfile_and_arrays.rdl
+++ b/tests/testcases/regfile_and_arrays.rdl
@@ -10,7 +10,7 @@ addrmap regfile_and_arrays {
         basic_reg_Type basic_reg_a;
     } layer1_regfile_a[2];
 
-    basic_reg_Type layer0_reg_a;
+    basic_reg_Type layer0_reg_a[2];
     regfile {
         regfile {
 			desc = "some description of the regfile";
