--- a/src/peakrdl_python/templates/reg_definitions.py.jinja
+++ b/src/peakrdl_python/templates/reg_definitions.py.jinja
@@ -36,58 +36,26 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 {%- endmacro %}
 
-{%- macro child_readable_register_getter(node) %}
-    def get_readable_registers(self, unroll:bool=False) -> Iterator[Union[Readable{% if asyncoutput %}Async{% endif %}Register, Readable{% if asyncoutput %}Async{% endif %}RegisterArray]]:
-        """
-        generator that produces all the readable_registers of this node
-        """
-        {% for child_node in node.children(unroll=False) -%}
-            {%- if isinstance(child_node, systemrdlRegNode) %}
-                {% if child_node.has_sw_readable %}
-                    {% if child_node.is_array %}
-        if unroll:
-            for child in self.{{safe_node_name(child_node)}}:
-                yield child
-        else:
-            yield self.{{safe_node_name(child_node)}}
-                    {% else %}
-        yield self.{{safe_node_name(child_node)}}
-                    {%- endif %}
-                {%- endif -%}
-            {%- endif -%}
-        {% endfor %}
-
-        # Empty generator in case there are no children of this type
-        if False: yield
-{%- endmacro %}
-
-{%- macro child_writable_register_getter(node) %}
-    def get_writable_registers(self, unroll:bool=False) -> Iterator[Union[Writable{% if asyncoutput %}Async{% endif %}Register, Writeable{% if asyncoutput %}Async{% endif %}RegisterArray]]:
-        """
-        generator that produces all the readable_registers of this node
-        """
-        {% for child_node in node.children(unroll=False) -%}
-            {%- if isinstance(child_node, systemrdlRegNode) %}
-                {% if child_node.has_sw_writable %}
-                    {% if child_node.is_array %}
-        if unroll:
-            for child in self.{{safe_node_name(child_node)}}:
-                yield child
-        else:
-            yield self.{{safe_node_name(child_node)}}
-                    {% else %}
-        yield self.{{safe_node_name(child_node)}}
-                    {%- endif %}
-                {%- endif -%}
-            {%- endif -%}
-        {% endfor %}
-
-        # Empty generator in case there are no children of this type
-        if False: yield
-{%- endmacro %}
-
 {%- macro child_register_getter(node) %}
-{{ child_readable_register_getter(node) }}
-{{ child_writable_register_getter(node) }}
+    def get_registers(self, unroll:bool=False) -> Iterator[Union[{% if asyncoutput %}Async{% endif %}Reg, {% if asyncoutput %}Async{% endif %}RegArray]]:
+        """
+        generator that produces all the registers of this node
+        """
+        {% for child_node in node.children(unroll=False) -%}
+            {%- if isinstance(child_node, systemrdlRegNode) %}
+                {% if child_node.is_array %}
+        if unroll:
+            for child in self.{{safe_node_name(child_node)}}:
+                yield child
+        else:
+            yield self.{{safe_node_name(child_node)}}
+                {% else %}
+        yield self.{{safe_node_name(child_node)}}
+                {%- endif %}
+            {%- endif %}
+        {% endfor %}
+
+        # Empty generator in case there are no children of this type
+        if False: yield
 {%- endmacro %}
 
