Fix some abstract class isssue with the sync classes

--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -46,6 +46,7 @@ from ..lib  import AsyncAddressMapArray
 from ..lib  import AsyncRegFileArray
 from ..lib import MemoryAsyncReadOnly, MemoryAsyncWriteOnly, MemoryAsyncReadWrite
 from ..lib import MemoryAsyncReadOnlyArray, MemoryAsyncWriteOnlyArray, MemoryAsyncReadWriteArray
+from ..lib import AsyncReg, AsyncRegArray
 from ..lib import RegAsyncReadOnly, RegAsyncWriteOnly, RegAsyncReadWrite
 from ..lib import RegAsyncReadOnlyArray, RegAsyncWriteOnlyArray, RegAsyncReadWriteArray
 from ..lib import FieldAsyncReadOnly, FieldAsyncWriteOnly, FieldAsyncReadWrite, Field
