--- a/src/peakrdl_python/templates/sim_addrmap.py.jinja
+++ b/src/peakrdl_python/templates/sim_addrmap.py.jinja
@@ -1,17 +1,58 @@
+{#
+peakrdl-python is a tool to generate Python Register Access Layer (RAL) from SystemRDL
+Copyright (C) 2021 - 2023
 
-from ..sim_lib.register import Register
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <https://www.gnu.org/licenses/>.
+#}
+
+{% include "header.py.jinja" with context %}
+
+from typing import Union
+
+from ..sim_lib.register import Register, MemoryRegister
 from ..sim_lib.memory import Memory
+from ..sim_lib.simulator import MemoryEntry
+{% if asyncoutput -%}
+from ..sim_lib.simulator import AsyncSimulator as Simulator
+{% else %}
 from ..sim_lib.simulator import Simulator
+{%- endif %}
 
 class {{top_node.inst_name}}_simulator_cls(Simulator):
 
-    def _build_register_dict(self):
-    {%- for node in top_node.descendants(unroll=True) -%}
-    {% if isinstance(node, systemrdlRegNode) %}
-        self._register_dict[{{node.absolute_address}}] = Register(width={{node.size*8}}, full_inst_name='{{'.'.join(node.get_path_segments())}}')
-    {% if isinstance(node, systemrdlRegNode) %}
-    {% endif %}
-    {% endfor %}
+    def _build_registers(self):
+        self._registers:dict[int, Union[MemoryRegister,Register]] = {
+        {%- for node in top_node.descendants(unroll=True) -%}
+            {% if isinstance(node, systemrdlRegNode) %}
+            {{node.absolute_address}} : {% if isinstance(node.parent, systemrdlMemNode) %}MemoryRegister(memory=self.memory_for_address({{node.absolute_address}}).memory,memory_address_offset={{node.address_offset}},{% else %}Register({% endif %}width={{node.size*8}}, full_inst_name='{{'.'.join(node.get_path_segments())}}'),
+            {%- endif %}
+        {%- endfor %}
+        }
+
+    def _build_memories(self) -> None:
+        self._memories:list[MemoryEntry] = [
+        {%- for node in top_node.descendants(unroll=True) -%}
+            {% if isinstance(node, systemrdlMemNode) %}
+            MemoryEntry(start_address={{node.absolute_address}},
+                        end_address={{node.absolute_address+node.size-1}},
+                        memory=Memory(width={{node.get_property('memwidth')}},
+                                      length={{node.get_property('mementries')}},
+                                      full_inst_name='{{'.'.join(node.get_path_segments())}}',
+                                      default_value=0)),
+            {%- endif %}
+        {%- endfor %}
+        ]
 
 if __name__ == '__main__':
     pass
